[gd_scene load_steps=3 format=3 uid="uid://xli4s40sumcq"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_880mi"]
[ext_resource type="Theme" uid="uid://csr58fx26qkvb" path="res://scenes/level/theme.tres" id="2_ns1kq"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_880mi")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 328.0
offset_top = 228.0
offset_right = -325.0
offset_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0039, 1.00554)
theme = ExtResource("2_ns1kq")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="ReturnButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return To Game"

[node name="MenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back To Menu"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="PanelContainer2" type="Polygon2D" parent="."]
z_index = -1
polygon = PackedVector2Array(832, 225, 832, 427, 325, 427, 325, 225)

[node name="Polygon2D" type="Polygon2D" parent="."]
modulate = Color(0, 0, 0, 0.45098)
show_behind_parent = true
z_index = -4
polygon = PackedVector2Array(0, 0, 1920, 0, 1920, 1080, 0, 1080)

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
